fixed breakpoint for collapse and fixed a few pages

--- a/public/stylesheets/non-functional-styles.css
+++ b/public/stylesheets/non-functional-styles.css
@@ -341,10 +341,6 @@ div.pdf-font-big button {
 
 }
 
-.align {
-    text-align: left;
-}
-
 .subheading {
     text-decoration: underline;
 }
